--- a/config/git/config
+++ b/config/git/config
@@ -1,12 +1,9 @@
-[user]
-    name = $GIT_AUTHOR_NAME
-    email = $GIT_AUTHOR_EMAIL
 [init]
 	defaultBranch = main
 [core]
 	editor = code --wait --new-window
     whitespace = -trailing-space # Don't consider trailing space change as a cause for merge conflicts
-    excludesFile = $GIT_GLOBAL_IGNORE_PATH
+    excludesFile = ~/.config/git/.gitignore.global
     pager = delta
 	autocrlf = input
 [branch]
@@ -140,4 +137,4 @@
 	theme = flat-dark-blue
 	icontheme = dark
 [include]
-    path = $GIT_CUSTOM_PATH
+    path = ~/.config/git/.gitconfig.local
