--- a/config/starship/starship.toml
+++ b/config/starship/starship.toml
@@ -131,6 +131,7 @@ symbol = " "
 
 [docker_context]
 symbol = " "
+detect_files = [ "docker-compose.yml", "docker-compose.yaml", "Dockerfile" ]
 
 [dotnet]
 symbol = ' '
