--- a/config/tabby/config.yaml
+++ b/config/tabby/config.yaml
@@ -245,6 +245,8 @@ terminal:
   showTabProfileIcon: true
   focusFollowsMouse: true
   wordSeparator: ',│`|:\"'' ()[]{}<>'
+  useConPTY: false
+  sixel: false
 ssh: {}
 clickableLinks: {}
 accessibility: {}
