--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -16,8 +16,8 @@ set -g visual-activity on # any attached window
 set -g display-time 4000  # show messages for 4 seconds
 
 # set active-inactive window styles
-set -g window-style 'fg=default,bg=#1e212b'
-set -g window-active-style 'fg=default,bg=#1e212b'
+set -g window-style 'fg=default,bg=#1C1E26'
+set -g window-active-style 'fg=default,bg=#1C1E26'
 
 # if multiple clients are attached to the same window, maximize it to the
 # bigger one
