--- a/.gitattributes
+++ b/.gitattributes
@@ -3,8 +3,10 @@
 # - Set line endings depending on extension, neither on checkout nor on checkin
 *.sh      text eol=lf 
 *.bash    text eol=lf 
-*.bashrc   text eol=lf
-*.zshrc    text eol=lf
+*.bashrc  text eol=lf
+*.zshrc   text eol=lf
 *.fish    text eol=lf 
+*.yaml    text eol=lf 
+*.yml     text eol=lf 
 *.cmd     text eol=crlf
 *.ps1     text eol=crlf
