--- a/config/tabby/config.yaml
+++ b/config/tabby/config.yaml
@@ -242,7 +242,6 @@ terminal:
     selection: '#e8b195'
     selectionForeground: '#121317'
   fallbackFont: Lucida Console
-  hideCloseButton: true
   showTabProfileIcon: true
   focusFollowsMouse: true
   wordSeparator: ',│`|:\"'' ()[]{}<>'
@@ -262,6 +261,7 @@ appearance:
         ::-webkit-scrollbar-track-piece {
           width: 0 !important;
         }
+  lastTabClosesWindow: true
 hacks: {}
 providerBlacklist: []
 commandBlacklist: []
